# kvlr

./: .env  .gitignore  Cargo.toml  LICENSE  generate-interfaces.sh  generate-keys.sh
aren/: Cargo.toml  DEFINITION.md
aren/src/: bool.rs  bytes.rs  dynint.rs  int.rs  lib.rs  mixed_tests.rs  string.rs  traits.rs  unit.rs
bnzn/: bnzn_token.py  codegen.py  main.py  parser.py  scanner.py  test.bnzn
bnzn/templates/templates/: client_template.rs.jinja  server_template.rs.jinja
kvlr/: Cargo.toml
kvlr-client/: Cargo.toml
kvlr-client/src/: client.rs  main.rs  repl.rs
kvlr-derives/: Cargo.toml
kvlr-derives/src/: lib.rs
kvlr-server/: Cargo.toml  diesel.toml
kvlr-server/migrations/2024-10-05-185916_create_users/: up.sql
kvlr-server/src/: main.rs  models.rs  schema.rs  server_impl.rs  server_trait.rs
kvlr/src/: lib.rs  promise_utils.rs  utils.rs
kvlr/src/client/: request.rs
kvlr/src/connection/: frame.rs  mod.rs  processor.rs  protocol_handler.rs  stream.rs
kvlr/src/rpc/: connection_state.rs  mod.rs  pipelining.rs  protocol_handler.rs  rpc_manager.rs
kvlr/src/server/: mod.rs  rpc_macro.rs  tls.rs
kvlr/src/streaming/: client.rs  connection_state.rs  mod.rs  server.rs  stream_receiver.rs  stream_sender.rs
