[workspace]
members = ["kvlr", "kvlr-server", "kvlr-client", "kvlr-derives", "aren"]
resolver = "2"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
codegen-units = 16
debug-assertions = false
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = false
