[package]
name = "kvlr-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"

kvlr = { path = "../kvlr" }
kvlr-derives = { path = "../kvlr-derives" }
