[package]
name = "kvlr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0"
# diesel = { version = "2.2.0", features = ["postgres"] }
futures = "0.3.30"
rmp-serde = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

kvlr = { path = "../kvlr" }
