[package]
name = "kvlr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0"
futures = "0.3.30"
rmp-serde = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"

diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
sha2 = "0.10.8"
hex = "0.4.3"
console-subscriber = "0.4.0"

kvlr = { path = "../kvlr" }
aren = { path = "../aren" }
