[package]
name = "kvlr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0"
bytes = "1"
multimap = "0.10.0"
rmp-serde = "1"
rustls = { version = "0.23", default-features = false, features = ["ring"]}
rustls-webpki = { version = "0", default-features = false, features = ["ring"]}
seq-macro = "0.3.5"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
# tls-listener = { version = "0.10", features = ["rustls"] }
tls-listener = { git = "https://github.com/OverShifted/tls-listener", features = ["rustls-ring"] }
tokio = { version = "1", features = ["net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"]}
tracing = "0.1"
tracing-subscriber = "0.3"

kvlr-derives = { path = "../kvlr-derives" }
